src/assets/stylesheets/index.scss
/* ... */
.navbar.navbar-expand-lg {
  display: block;
}
.navbar-toggler.btn {
  font-size: 0.9rem;
  line-height: 1;
  color: var(--bs-navbar-color);
  background: #fff;
  box-shadow: 0 0.375rem 2.5rem 0 rgba(140, 152, 164, 0.3);
}
.navbar-toggler .navbar-toggler-toggled {
  display: none;
}
.navbar-toggler .navbar-toggler-default {
  display: flex;
}
.navbar-toggler[aria-expanded='true'] .navbar-toggler-default {
  display: none;
}
.navbar-toggler[aria-expanded='true'] .navbar-toggler-toggled {
  display: flex;
}

.nav-bordered {
  background: #fff;
  margin: 0;
  padding: 0;
  list-style-type: none;
  display: block;
  overflow: hidden;
  width: 100%;
}

.nav-bordered li:first-child {
  border: 0px;
}
.nav-bordered li {
  display: block;
  margin: 0;
  padding: 0;
  border-top: 1px solid var(--border);
}

.nav-bordered li a {
  font-size: 14px;
  padding: 8px 15px;
  margin: 0;
  color: var(--bs-nav-link-color);
  display: flex;
}

.nav-bordered li.active > a {
  background: var(--bs-primary);
  color: #fff;
}

.nav-bordered li.active li.active a {
  background: var(--bs-primary-lighten);
  color: #fff;
}
.nav-bordered li a:hover,
.nav-bordered li a:active {
  background: var(--bs-primary-lighten);
  text-decoration: none !important;
  color: #fff;
}

.nav-bordered li a .bi {
  font-size: 1.2rem;
  margin: auto 1rem auto 0;
  display: flex;
  flex-grow: 0;
}
.nav-bordered li a span {
  line-height: 1.5;
}

.nav-bordered li ul {
  background: #fff;
  margin: 0;
  padding: 0;
}

.nav-bordered li ul a {
  font-size: 12px;
  padding: 5px 10px 5px 20px;
  margin: 0;
  display: block;
}

.navbar-toggler.collapsed .bi-list:before {
  content: '\f479';
}

.navbar-toggler .bi-list:before {
  content: '\f659';
}

/* .nav-pills
 =================================================================== */

.nav-pills {
  --bs-nav-pills-border-radius: 0;
  --bs-nav-pills-link-active-color: #fff;
  --bs-nav-pills-link-active-bg: var(--bs-primary);
}
.nav-pills .nav-link {
  padding: 4px 8px;
}
.nav-pills .nav-link.active {
  border: 1px solid #fff;
}

/* list details
 =================================================================== */

.list-label {
  text-transform: uppercase;
  font-weight: 500;
  font-size: 0.65rem;
  display: block;
  opacity: 0.6;
}
.list-value {
  display: block;
  margin: 0;
}

/* two color top navbar
 =================================================================== */

header section:after {
  background: var(--middle-grey);
  content: '';
  display: block;
  position: absolute;
  top: 0;
  height: 38px;
  z-index: -1;
  right: 0;
  left: 0;
  pointer-events: none;
}

header.portal-only section:after {
  display: none;
}

/* breadcrumb
 =================================================================== */

.breadcrumb-item {
  color: var(--headline);
  font-family: 'Fira Sans', sans-serif;
  font-weight: 500;
  font-size: 14px;

  &.active {
    color: var(--bs-primary);
  }
}

.breadcrumb-item + .breadcrumb-item::before {
  font-family: bootstrap-icons !important;
  content: '\f285';
}

